# SQ-SequentialLoader

./: README.md  SequentialImageLoader.py  VideoFileLoader.py  __init__.py  pyproject.toml
SQ-imageloader/: SequentialImageLoader.py  __init__.py  pyproject.toml  readme.md
SQ-imageloader/js/getVideoFrames_js/: LICENSE  README.md  mod.js
SQ-imageloader/sample_workflows/: cat2dog_with_animatediff.json  faceswap_masking_helper.json
js/: MagicWand.js  MaskEditorForVframes.js  main.js
