[project]
name = "comfyui-sq-imageloader"
description = "This is an extension node for ComfyUI that allows you to load frames from a video in bulk and perform masking and sketching on each frame through a GUI."
version = "1.0.8"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/bruefire/ComfyUI-SeqImageLoader"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bruefire"
DisplayName = "SQ-ImageLoader"
Icon = "docs/icon.png"
